--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "build": "vite build",
+   "build": "npx vite build"
+
         "dev": "vite"
     },
     "devDependencies": {
