--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "scripts": {
    "build": "npx vite build"
 
-        "dev": "vite"
+        "dev": "vite",
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
