--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
     "private": true,
     "type": "module",
     "scripts": {
-   "build": "npx vite build"
+   "build": "npx vite build",
 
-        "dev": "vite",
+        "dev": "vite"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
